...
        "unarmed":              "Waffenlos",
        "confirmation":         "Bestätigung",
        "tapToRoll":            "Antippen zum Würfeln",
        "modifier":             "Mod",
        "new":                  "Neu",
        "initiative.label":     "INITIATIVE",
        "lifePoints.label":     "LEBENSPUNKTE",
        "action.label":         "AKTION",
        "unarmed.label":        "WAFFENLOS",
        "selectWeapon":         "Waffe wählen",
        "selectShield":         "Schild wählen",
        "noShield":             "Kein Schild",
        // Rulebook
...
